<resources>
    <string name="app_name">Soil Test</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="tab_text_4">Tab 4</string>
    <string name="tab_text_5">Tab 5</string>
    <string name="user_name">User Name: \t </string>
    <string name="email_id">Email Id: \t</string>
    <string name="sign_in_invalid_field"> Field can\'t be empty</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nitrogen">Nitrogen</string>
    <string name="phosphate">Phosphate</string>
    <string name="pottasium">Pottasium</string>
    <string name="zinc">Zinc</string>
    <string name="sulphur">Sulphur</string>
    <string name="boron">Boron</string>
    <string name="manganese">Manganese</string>
    <string name="copper">Copper</string>
    <string name="iron">Iron</string>
    <string name="org_carbon">ORG Carbon</string>
</resources>
