<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Cyan"
    android:clickable="true"
    tools:context=".cropfertilizer.data.TableFragment"
    android:focusable="true">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="50dp">
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Nutrient"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/Black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Amount(Kg/ha)"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/Black"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nitrogen"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/Black"/>

            <TextView
                android:id="@+id/nitrogen_amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="nitrogen"
                android:layout_gravity="center"
                android:textColor="@color/Black"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phosphate"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/Black"/>

            <TextView
                android:id="@+id/phosphate_amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/Black"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pottasium"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/Black"/>

            <TextView
                android:id="@+id/pottasium_amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/Black"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zinc"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/Black"/>

            <TextView
                android:id="@+id/zinc_amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/Black"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sulphur"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/Black"/>

            <TextView
                android:id="@+id/sulphur_amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/Black"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/boron"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/Black"/>

            <TextView
                android:id="@+id/boron_amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/Black"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/manganese"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/Black"/>

            <TextView
                android:id="@+id/manganese_amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/Black"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/copper"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/Black"/>

            <TextView
                android:id="@+id/copper_amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/Black"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/iron"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/Black"/>

            <TextView
                android:id="@+id/iron_amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/Black"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/org_carbon"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/Black"/>

            <TextView
                android:id="@+id/org_carbon_amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/Black"/>
        </TableRow>
    </TableLayout>




</RelativeLayout>